[project]
name = "iaaf"
version = "3.0.0"
description = "Internet Archive Anything Finder - iaaf"
authors = [{ name = "Karl Dreher" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "internetarchive>=4.1.0,<5",
    "pyyaml>=6.0.2,<7",
    "pydantic>=2.9.2,<3",
]

[project.scripts]
iaaf = "anything_finder.main:main"

[dependency-groups]
release = ["python-semantic-release>=8.1.1,<9"]
test = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.7.1,<0.8",
]

[tool.uv]
default-groups = [
    "release",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["anything_finder"]

[tool.hatch.build.targets.wheel]
include = ["anything_finder"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F","I"]
ignore = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov -v"

[tool.semantic_release]
version_variables = ["anything_finder/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.main]
match = "(.*)"
prerelease = false

