[project]
name = "iaaf"
version = "4.2.0"
description = "Internet Archive Anything Finder - iaaf"
authors = [{ name = "Karl Dreher" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "internetarchive>=5.7.1",
    "pyyaml>=6.0.3,<7",
    "pydantic>=2.9.2,<3",
]

[project.scripts]
iaaf = "anything_finder.main:main"

[dependency-groups]
release = ["python-semantic-release>=9.16.1,<10"]
test = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.14.10",
]

[tool.uv]
default-groups = [
    "release",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["anything_finder"]

[tool.hatch.build.targets.wheel]
include = ["anything_finder"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F","I"]
ignore = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov -v"

[tool.semantic_release]
version_variables = ["anything_finder/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

branch = "main"
upload_to_pypi = false
upload_to_release = true

[tool.semantic_release.branches.main]
match = "(.*)"
prerelease = false

